Enhance functionality by adding language model analysis for page content, updating UI buttons for summarization, rewriting, bias identification, and speaking features. Introduce trial tokens in manifest and implement dynamic output language selection in summarization. Improve button styles and add caching for page content.

--- a/popup/index.html
+++ b/popup/index.html
@@ -12,7 +12,11 @@
 	</header>
 	<main>
 		<section class="controls">
-			<button id="analyzeBtn">Analyze Current Page</button>
+			<button id="analyzeBtn">Summarize</button>
+			<button id="rewriteBtn">Rewrite</button>
+			<button id="identifyBiasesBtn">Identify biases</button>
+			<button id="speakBtn">Speak with this page</button>
+			<button id="crossExamineBtn">Cross examine</button>
 		</section>
 		<section id="summarySection">
 			<h2>Summary</h2>
