Refactor page content analysis function to improve clarity and functionality. Update UI button text for bias identification and add a new section for AI analysis results in the popup. Implement rendering logic for analysis output in the popup script.

--- a/popup/index.html
+++ b/popup/index.html
@@ -14,7 +14,7 @@
 		<section class="controls">
 			<button id="analyzeBtn">Summarize</button>
 			<button id="rewriteBtn">Rewrite</button>
-			<button id="identifyBiasesBtn">Identify biases</button>
+			<button id="identifyBiasesBtn">Analyse this page</button>
 			<button id="speakBtn">Speak with this page</button>
 			<button id="crossExamineBtn">Cross examine</button>
 		</section>
@@ -29,6 +29,10 @@
 		<section id="claimsSection">
 			<h2>Claims to Cross-check</h2>
 			<ol id="claims"></ol>
+		</section>
+		<section id="analysisSection">
+			<h2>AI Analysis</h2>
+			<div id="analysis"></div>
 		</section>
 	</main>
 	<script src="popup.js" type="module"></script>
