--- a/popup/index.html
+++ b/popup/index.html
@@ -15,6 +15,7 @@
 		<nav class="tab-nav">
 			<button class="tab-btn active" data-tab="summary">Summary</button>
 			<button class="tab-btn" data-tab="analysis">AI Analysis</button>
+			<button class="tab-btn" data-tab="rewrite">Rewrite content</button>
 			<button class="tab-btn" data-tab="actions">Chat</button>
 		</nav>
 
@@ -26,15 +27,16 @@
 					<h2>Summary</h2>
 					<button id="analyzeBtn" class="action-btn">Generate Summary</button>
 				</div>
-				<div id="summary"></div>
+				<div id="summary" class="summary"></div>
 			</div>
 
-			<!-- Rewrite article Tab -->
+			<!-- Rewrite content Tab -->
 			<div id="rewrite-tab" class="tab-panel">
 				<div class="tab-header">
-					<h2>Rewrite article</h2>
+					<h2>Rewrite content</h2>
+					<button id="rewriteContentBtn" class="action-btn">Rewrite</button>
 				</div>
-				<div id="rewrite"></div>
+				<div id="rewrite-content"></div>
 			</div>
 
 			<!-- AI Analysis Tab -->
