--- a/popup/index.html
+++ b/popup/index.html
@@ -16,7 +16,7 @@
 			<button class="tab-btn active" data-tab="summary">Summary</button>
 			<button class="tab-btn" data-tab="analysis">AI Analysis</button>
 			<button class="tab-btn" data-tab="rewrite">Rewrite content</button>
-			<button class="tab-btn" data-tab="actions">Chat</button>
+			<button class="tab-btn" data-tab="actions">Critical Thinking</button>
 		</nav>
 
 		<!-- Tab Content -->
@@ -48,15 +48,17 @@
 				<div id="analysis"></div>
 			</div>
 
-			<!-- Actions Tab -->
-			<div id="chat-tab" class="tab-panel">
+			<!-- Critical Thinking Tab -->
+			<div id="actions-tab" class="tab-panel">
 				<div class="tab-header">
-					<h2>Chat</h2>
+					<h2>Critical Thinking</h2>
 				</div>
 				<div class="actions-grid">
 					<button id="rewriteBtn" class="action-btn full-width">Rewrite Content</button>
 					<button id="speakBtn" class="action-btn full-width">Speak with Page</button>
+					<button id="generateQuestionsBtn" class="action-btn full-width">Generate questions</button>
 				</div>
+				<div id="questions-output" style="margin-top:14px;"></div>
 			</div>
 		</div>
 	</main>
