--- a/popup/index.html
+++ b/popup/index.html
@@ -17,6 +17,7 @@
 			<button class="tab-btn" data-tab="analysis">AI Analysis</button>
 			<button class="tab-btn" data-tab="rewrite">Rewrite content</button>
 			<button class="tab-btn" data-tab="actions">Critical Thinking</button>
+			<button class="tab-btn" data-tab="calendar">Calendar Events</button>
 		</nav>
 
 		<!-- Tab Content -->
@@ -79,6 +80,15 @@
 					<button id="generateQuestionsBtn" class="action-btn full-width">Generate questions</button>
 				</div>
 				<div id="questions-output" style="margin-top:14px;"></div>
+			</div>
+
+			<!-- Calendar Events Tab -->
+			<div id="calendar-tab" class="tab-panel">
+				<div class="tab-header">
+					<h2>Calendar Events</h2>
+					<button id="createCalendarEventBtn" class="action-btn">Create Calendar Event</button>
+				</div>
+				<div id="calendar-events" class="calendar-events-container"></div>
 			</div>
 		</div>
 	</main>
