feat(popup): add AI-powered date extraction for calendar events
Replace "Create Calendar Event" button with "Extract Dates" to automatically pull potential calendar events from page content using LanguageModel API. Updated CSS classes and styles for new card-based UI displaying extracted dates, titles, descriptions, and durations. Implemented caching by URL and fallback for no dates detected. This enhances user workflow by assisting in identifying and organizing calendar items from articles.

--- a/popup/index.html
+++ b/popup/index.html
@@ -86,7 +86,7 @@
 			<div id="calendar-tab" class="tab-panel">
 				<div class="tab-header">
 					<h2>Calendar Events</h2>
-					<button id="createCalendarEventBtn" class="action-btn">Create Calendar Event</button>
+					<button id="extractDatesBtn" class="action-btn">Extract Dates</button>
 				</div>
 				<div id="calendar-events" class="calendar-events-container"></div>
 			</div>
