Add Proofreader feature and context menu options for text analysis

--- a/popup/index.html
+++ b/popup/index.html
@@ -18,6 +18,7 @@
 			<button class="tab-btn" data-tab="rewrite">Rewrite content</button>
 			<button class="tab-btn" data-tab="actions">Critical Thinking</button>
 			<button class="tab-btn" data-tab="calendar">Calendar Events</button>
+			<button class="tab-btn" data-tab="proofreader">Proofreader</button>
 		</nav>
 
 		<!-- Tab Content -->
@@ -89,6 +90,15 @@
 					<button id="extractDatesBtn" class="action-btn">Extract Dates</button>
 				</div>
 				<div id="calendar-events" class="calendar-events-container"></div>
+			</div>
+
+			<!-- Proofreader Tab -->
+			<div id="proofreader-tab" class="tab-panel">
+				<div class="tab-header">
+					<h2>Proofreader</h2>
+					<button id="proofreadBtn" class="action-btn">Proofread this article</button>
+				</div>
+				<div id="proofreader-output"></div>
 			</div>
 		</div>
 	</main>
