--- a/popup/index.html
+++ b/popup/index.html
@@ -92,8 +92,7 @@
 				<div class="tab-header">
 					<h2>Image Analysis</h2>
 				</div>
-				<div id="image-container"></div>
-								<div id="image-analysis-text"></div>			</div>
+				<div id="image-analysis-content"></div>			</div>
 		</div>
 	</main>
 	<script src="popup.js" type="module"></script>
